Extended logging and process runner.